# CodeWhale

./: .cnb.yml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.ja-JP.md  README.md  README.vi.md  README.zh-CN.md  SECURITY.md  config.example.toml  ohos-clang.ps1  ohos-clang.sh  ohos-clangxx.ps1  ohos-clangxx.sh
.cargo/: config.toml
.github/: APPROVED_CONTRIBUTORS  AUTHOR_MAP  PULL_REQUEST_TEMPLATE.md
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: ci.yml  issue-gate.yml  pr-gate.yml  release.yml  web.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: bash_arity.rs  lib.rs
crates/hooks/: Cargo.toml
crates/release/: Cargo.toml
crates/release/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/state/src/: lib.rs
crates/state/tests/: parity_state.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tui/: CHANGELOG.md  Cargo.toml  build.rs
crates/tui/src/: child_env.rs  (+28 more)
crates/whaleflow/: Cargo.toml
crates/whaleflow/src/: lib.rs  model_policy.rs  replay.rs  starlark_authoring.rs
docs/: AGENT_ETHOS.md  BENCHMARKS.md  CONFIGURATION.md  GUIDE.md  HARNESS_PROFILE_CUTLINE.md  HarmonyOS.md  INSTALL.md  MCP.md  MIMO_BENCHMARK_ISSUES.md  MODEL_LAB.md  MODES.md  PROVIDERS.md  REBRAND.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RUNTIME_API.md  SUBAGENTS.md  TOOL_SURFACE.md  V0_9_0_RELEASE_ACCEPTANCE.md  VISION_NORTH_STAR.md  WHALEFLOW_EXTERNAL_MEMORY.md
docs/rfcs/: 1364-hooks-lifecycle.md  2574-provider-fallback-chain.md
extensions/vscode/: README.md  package-lock.json  package.json  tsconfig.json
npm/codewhale/: README.md  package.json
npm/deepseek-tui/: README.md  package.json
scripts/: check-coauthor-trailers.py  ohos-env.ps1  ohos-env.sh  verify_task.sh
scripts/benchmarks/: README.md  pinchbench_codewhale.py  run-swebench.sh  run-terminal-bench.sh
scripts/release/: check-ohos-deps.sh  check-published.sh  check-versions.sh  crates.sh  publish-crates.sh
scripts/tencent-lighthouse/: bootstrap-ubuntu.sh
web/app/: layout.tsx
web/lib/: facts.generated.ts
web/scripts/: derive-facts.mjs
workflows/: issue_fix_tournament.star  rlm_cache_change.star
(+123 files in other folders)
