[package]
name = "codewhale-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime boundaries for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
codewhale-agent = { path = "../agent", version = "0.8.48" }
codewhale-config = { path = "../config", version = "0.8.48" }
codewhale-execpolicy = { path = "../execpolicy", version = "0.8.48" }
codewhale-hooks = { path = "../hooks", version = "0.8.48" }
codewhale-mcp = { path = "../mcp", version = "0.8.48" }
codewhale-protocol = { path = "../protocol", version = "0.8.48" }
codewhale-state = { path = "../state", version = "0.8.48" }
codewhale-tools = { path = "../tools", version = "0.8.48" }
serde_json.workspace = true
uuid.workspace = true
