[package]
name = "codewhale-whaleflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed WhaleFlow workflow IR and validation for CodeWhale"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_env = "ohos"))'.dependencies]
anyhow.workspace = true
starlark = "0.13.0"

[dev-dependencies]
serde_json.workspace = true
